Replaced helmet with express-standard for easier CSP (helmet custom download failed on stackato). Markdown moved to server side to shrink client scripts Smaller image size for splash screens (PNG8) and loading bar (too bad indeterminate doesn't look great on mobile FF) Fixed viewport for iOS

--- a/public/css/app.styl
+++ b/public/css/app.styl
@@ -346,7 +346,7 @@ main
 		text-align center
 		text-transform uppercase
 
-.view-login main
+#view-login
 
 	.hexicon
 		margin-top -30px
@@ -358,7 +358,7 @@ main
 		display block
 		padding 10px 0
 
-.view-index main
+#view-home
 
 	img
 		margin-top -30px
@@ -399,7 +399,7 @@ main
 					background-color color-light-grey
 					color color-blue
 
-.view-questions main
+#view-questions
 
 	.form-group
 		background-color #FFF
@@ -539,6 +539,11 @@ main
 	margin 20px 0 0 0
 	display none
 	background url('/img/logo-home.png') no-repeat 50% 295px
+	background-size 110px 110px
+
+	progress
+		margin-top 100px
+		width 80%
 
 .hexicon
 	text-align center
@@ -569,7 +574,7 @@ main
 			transform scale(0.75)
 			transform-origin 50% 0;
 
-.view-getting-around
+#view-getting-around
 
 	.content
 		padding 20px
@@ -643,8 +648,6 @@ $background-orange
 		font-size 24px
 		margin 40px 0 0
 
-
-
 	background-image none
 
 	&.palette-0
@@ -712,7 +715,7 @@ $background-orange
 	h3
 		font-size 22px
 
-	.view-questions
+	#view-questions
 		h5
 			font-size 24px
 
